--- a/css/style.css
+++ b/css/style.css
@@ -682,6 +682,7 @@ ul.header-nav > li.last-button > a:hover {
 .timeline {}
     .timeline-row {
         position: relative;
+        margin-top: 40px;
     }
     .timeline-row:before {
         content: '';
@@ -694,14 +695,13 @@ ul.header-nav > li.last-button > a:hover {
     }
     .timeline-row > .timeline-post {
         position: relative;
-        margin: 49px 0 0 0;
         padding: 0;
         text-align: center;
     }
     .timeline-row > .timeline-post > .timeline-post-now {
         color: #bfc2c5;
         background: #dee0e2;
-        padding: 0px 30px;
+        padding: 0 30px;
         display: inline-block;
         font-size: 15px;
         line-height: 35px;
@@ -709,16 +709,101 @@ ul.header-nav > li.last-button > a:hover {
         position: relative;
         text-transform: uppercase;
     }
-    .timeline-row > .timeline-post:before {
-        content: '';
-        width: 24px;
-        height: 24px;
+    .timeline-row > .timeline-posts {
+        position: relative;
         display: block;
-        border: 6px solid;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    .timeline-row > .timeline-posts > .timeline-line {
+        width: 45%;
+        position: relative;
+        display: inline-block;
+    }
+    .timeline-row > .timeline-posts > .timeline-line:before {
+        background: #fff;
+        content: '';
+        width: 15px;
+        height: 15px;
+        display: block;
+        border: 6px solid #dee0e2;
         border-radius: 100%;
         position: absolute;
-        top: 15px;
-        left: -12px;
-        border-color: #dee0e2;
-        background-color: #fff;
+        top: 43px;
+        left: -65px;
+    }
+    .inner {
+        color: #6a737b;
+        font-size: 18px;
+        line-height: 15px;
+        border-radius: 5px;
+        padding: 20px 25px;
+        background-color: #f5f8fa;
+        margin: 30px 0;
+        display: inline-block;
+    }
+    .inner-description {
+        color: #6a737b;
+        font-size: 14px;
+        line-height: 24px;
+        margin: 0 200px 40px 0;
+        border-radius: 5px;
+        background-color: #f5f8fa;
+        display: inline-block;
+        padding: 0 25px 10px 25px;
+        position: absolute;
+        top: 68px;
+        left: 0;
+    }
+    .timeline-row > .timeline-posts > .timeline-date-left {
+        color: #dadce0;
+        font-size: 18px;
+        line-height: 75px;
+        text-align: right;
+        padding: 20px 0;
+        float: left;
+        position: relative;
+    }
+    .timeline-row > .timeline-posts > .timeline-date-right {
+        color: #dadce0;
+        font-size: 18px;
+        line-height: 75px;
+        text-align: left;
+        padding: 20px 0;
+        float: right;
+        position: relative;
+    }
+    .timeline-row > .timeline-posts > .timeline-title-left {
+        text-align: right;
+        float: left;
+        position: relative;
+    }
+    .timeline-row > .timeline-posts > .timeline-title-right {
+        text-align: left;
+        float: right;
+        position: relative;
+    }
+
+.mobile-app {
+    background: url(../img/mobile-ap-bg.jpg) center no-repeat;
+}
+    .row2 {
+        margin: 0;
+        padding: 0;
+        position: relative;
+    }
+    .row2 > .rowleft {
+        width: 50%;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        float: left;
+    }
+    .row2 > .rowright {
+        width: 50%;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        float: right;
     }
