--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body {
 }
 
 .header {
-                height: 66px;
+                height: 59px;
         }
 .header-logo {
                 float: left;
@@ -116,11 +116,11 @@ body {
         }
 .header-logo > img {
     width: 150px;
-    padding: 8px 0;
+    padding: 8px 0 0 0;
 }
 ul.header-nav {
                 float: right;
-                padding: 3px 0;
+                padding: 0;
                 margin: 0;
                 list-style-type: none;
         }
@@ -143,7 +143,7 @@ ul.header-nav > li.last-button > a {
                 background-color: #ff6622;
                 border: none;
                 border-radius: 30px;
-                padding: 9px 30px;
+                padding: 8px 30px;
                 color: #fff;
         }
 ul.header-nav > li.last-button > a:hover {
@@ -567,6 +567,7 @@ ul.header-nav > li.last-button > a:hover {
     .review-steps > .review-step > .review-img {
         padding-left: 17%;
         margin-bottom: 100px;
+        opacity: 0.33;
     }
     .featured-title {
         text-transform: uppercase;
@@ -589,6 +590,16 @@ ul.header-nav > li.last-button > a:hover {
         position: relative;
         vertical-align: middle;
         padding-bottom: 50px;
+        opacity: 0.5;
+    }
+    .featured-img.second {
+        margin-top: -2px;
+    }
+    .featured-img.third {
+        margin-top: 2px;
+    }
+    .featured-img.last {
+        margin-top: -9px;
     }
 
 .faq {}
@@ -679,7 +690,9 @@ ul.header-nav > li.last-button > a:hover {
         line-height: 1;
     }
 
-.timeline {}
+.timeline {
+    margin-bottom: 40px;
+}
     .timeline-row {
         position: relative;
         margin-top: 40px;
@@ -747,14 +760,11 @@ ul.header-nav > li.last-button > a:hover {
         color: #6a737b;
         font-size: 14px;
         line-height: 24px;
-        margin: 0 200px 40px 0;
-        border-radius: 5px;
-        background-color: #f5f8fa;
         display: inline-block;
-        padding: 0 25px 10px 25px;
-        position: absolute;
-        top: 68px;
-        left: 0;
+        margin-right: 150px;
+    }
+    .inner.preview {
+        margin-top: 130px;
     }
     .timeline-row > .timeline-posts > .timeline-date-left {
         color: #dadce0;
@@ -785,9 +795,24 @@ ul.header-nav > li.last-button > a:hover {
         position: relative;
     }
 
-.mobile-app {
-    background: url(../img/mobile-ap-bg.jpg) center no-repeat;
+.section.mobile-app {
+    background-color: #000;
+    position: relative;
+    background-size: cover;
+    padding: 0;
 }
+    .mobile-app:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: url(../img/mobile-ap-bg.jpg) center no-repeat;
+        opacity: 0.3;
+        background-size: cover;
+    }
     .row2 {
         margin: 0;
         padding: 0;
@@ -795,15 +820,86 @@ ul.header-nav > li.last-button > a:hover {
     }
     .row2 > .rowleft {
         width: 50%;
-        margin: 0;
+        margin: 100px 0 0 0;
         padding: 0;
         position: relative;
         float: left;
     }
     .row2 > .rowright {
         width: 50%;
-        margin: 0;
+        margin: 90px 0 0 0;
         padding: 0;
         position: relative;
         float: right;
     }
+    .rowleft > .mobile-app-img {
+        padding-right: 40px;
+    }
+    .rowright > .mobile-app-title {
+        color: #fff;
+        font-size: 50px;
+        line-height: 1;
+        margin-top: 88px;
+        margin-bottom: 20px;
+        padding-left: 5px;
+    }
+    .rowright > .mobile-app-description {
+        color: #fff;
+        font-size: 18px;
+        line-height: 32px;
+        margin-bottom: 25px;
+        padding-left: 5px;
+    }
+    .rowright > .mobile-app-button {
+        margin-bottom: 15px;
+        padding-left: 5px;
+        margin-right: 15px;
+    }
+
+.newsletter {}
+    .newsletter > .newsletter-form {
+        margin: 0 auto;
+        width: 750px;
+        display: block;
+    }
+    .newsletter > .newsletter-form > .input-group {
+        position: relative;
+        display: inline-block;
+        font-size: 0;
+    }
+    .input-group > .form-control {
+        font-size: 19px;
+        height: 80px;
+        line-height: 80px;
+        padding: 0 38px;
+        position: relative;
+        border-radius: 0;
+        border-color: #e0e8ee;
+        background: #f8fbfd;
+        display: inline-block;
+        width: 60%;
+        margin: 50px 0 0 120px;
+    }
+    .input-group > .input-group-addon {
+        padding: 19px 60px;
+        vertical-align: middle;
+        background-color: #FF1900;
+        display: inline-block;
+        margin: 50px 0 0 0;
+        cursor: pointer;
+        position: absolute;
+        border-bottom-right-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    .input-group > .input-group-addon:hover {
+        background-color: darkslategray;
+    }
+    .newsletter-text {
+        color: #c0cad0;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        margin: 20px 0 20px 0;
+    }
+
+.map {}
